--- a/software/dummy/linux/CMakeLists.txt
+++ b/software/dummy/linux/CMakeLists.txt
@@ -9,9 +9,15 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 include_directories(
   include
+  include/llcp
 )
+
+add_definitions(-DLLCP_LITTLE_ENDIAN)
 
 add_executable(minipix_dummy
   src/main.cpp
   src/serial_port.cpp
+  src/minipix_dummy_linux.cpp
+  src/llcp/llcp_endian.c
+  src/llcp/llcp_minipix_messages.c
 )
