--- a/software/dummy/linux/CMakeLists.txt
+++ b/software/dummy/linux/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(minipix_dummy
   src/main.cpp
   src/serial_port.cpp
   src/minipix_dummy_linux.cpp
+  src/minipix_dummy.cpp
   src/llcp/llcp_endian.c
   src/llcp/llcp_minipix_messages.c
 )
