--- a/software/example_interface/linux/CMakeLists.txt
+++ b/software/example_interface/linux/CMakeLists.txt
@@ -10,13 +10,20 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 include_directories(
   include
   include/llcp
+  include/mui
 )
 
 add_definitions(-DLLCP_LITTLE_ENDIAN)
 
 add_executable(example_interface
   src/main.cpp
+
+  src/minipix_interface_linux.cpp
   src/serial_port.cpp
+
+  src/mui/minipix_interface.c
+
+  src/llcp/llcp.c
   src/llcp/llcp_endian.c
   src/llcp/llcp_minipix_messages.c
 )
