--- a/software/gatherer/CMakeLists.txt
+++ b/software/gatherer/CMakeLists.txt
@@ -5,10 +5,20 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+
+add_definitions(-DLLCP_LITTLE_ENDIAN)
+
 include_directories(
   include
+  include/llcp
 )
 
 add_executable(gatherer
-  src/gatherer.cpp
+  src/main.cpp
+  src/serial_port.cpp
+
+  src/llcp/llcp.c
+  src/llcp/llcp_endian.c
+  src/llcp/llcp_minipix_messages.c
 )
