--- a/software/tmux/allpc/session.yml
+++ b/software/tmux/allpc/session.yml
@@ -10,7 +10,8 @@ windows:
         - socat -d -d PTY,link=/tmp/ttyS2,rawer,echo=0 PTY,link=/tmp/ttyS3,rawer,echo=0
   - main:
       layout: even-vertical
+      pre_window: echo pes
       panes:
-        - sleep 0.3; ./minipix_dummy
-        - sleep 0.3; ./example_interface
-        - sleep 0.3; ./gatherer
+        - sleep 0.5; ./minipix_dummy /tmp/ttyS0 115200 1
+        - sleep 0.5; ./example_interface /tmp/ttyS1 115200 1 /tmp/ttyS2 115200 1
+        - sleep 0.5; ./gatherer /tmp/ttyS3 115200 1
