--- a/software/example_interface/stm32f411/gdb.conf
+++ b/software/example_interface/stm32f411/gdb.conf
@@ -1,7 +1,12 @@
 set breakpoint pending on
 
 # set breakpoints
-# break main.cpp:121
+# break main.c:174
+break mui.c:56
+# break gatherer_interface.c:41
+# break gatherer_interface_stm.c:29
+# break llcp.c:134
+# break minipix_interface_stm.c:76
 
 # connect to ocd
 target remote :3333
