--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,6 +3,10 @@ name: Docs
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '**/README.md'
+      - '**.yaml'
+      - '**.launch'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
