--- a/software/gatherer/CMakeLists.txt
+++ b/software/gatherer/CMakeLists.txt
@@ -9,9 +9,12 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 add_definitions(-DLLCP_LITTLE_ENDIAN)
 
+find_package(OpenCV REQUIRED)
+
 include_directories(
   include
   include/llcp
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 add_executable(gatherer
@@ -21,4 +24,8 @@ add_executable(gatherer
   src/llcp/llcp.c
   src/llcp/llcp_endian.c
   src/llcp/llcp_minipix_messages.c
+)
+
+target_link_libraries(gatherer
+  ${OpenCV_LIBS}
 )
