--- a/software/dummy/linux/CMakeLists.txt
+++ b/software/dummy/linux/CMakeLists.txt
@@ -1,19 +1,20 @@
 cmake_minimum_required(VERSION 3.1.2)
 project(minipix_dummy)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
+add_definitions(-DLLCP_LITTLE_ENDIAN)
+
+add_definitions(-Wall)
+add_definitions(-Wextra)
+add_definitions(-Wpedantic)
 
 include_directories(
   include
   include/llcp
 )
-
-add_definitions(-DLLCP_LITTLE_ENDIAN)
 
 find_package(Threads) # only for linux
 
