--- a/software/llcp/CMakeLists.txt
+++ b/software/llcp/CMakeLists.txt
@@ -3,13 +3,15 @@ project(llcp)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
+add_definitions(-DLLCP_LITTLE_ENDIAN)
+
+add_definitions(-Wall)
+add_definitions(-Wextra)
+add_definitions(-Wpedantic)
 
 include_directories(
   include
 )
-
-add_definitions(-DLLCP_LITTLE_ENDIAN)
 
 add_library(llcp
   src/llcp.c
