--- a/software/tmux/interface_hw/session.yml
+++ b/software/tmux/interface_hw/session.yml
@@ -7,4 +7,4 @@ windows:
       pre_window: echo pes
       panes:
         - ./minipix_dummy /dev/ttyUSB1 115200 0 `pwd`/dummy_data
-        - sleep 1; ./gatherer /dev/ttyUSB0 115200 0
+        - sleep 1; ./gatherer /dev/ttyUSB0 115200 0 `pwd`/received_data/data.txt
