--- a/software/tmux/all_linux/session.yml
+++ b/software/tmux/all_linux/session.yml
@@ -1,15 +1,16 @@
 name: minipix_virtual
 root: ./
 startup_window: main
-# pre_window: 
+# pre_window:
 windows:
   - serials:
       layout: tiled
       panes:
+        - socat -d -d PTY,link=/tmp/ttyS0,rawer,echo=0 PTY,link=/tmp/ttyS1,rawer,echo=0
         - socat -d -d PTY,link=/tmp/ttyS2,rawer,echo=0 PTY,link=/tmp/ttyS3,rawer,echo=0
   - main:
       layout: even-vertical
-      pre_window: echo pes
       panes:
-        - sleep 0.5; ./example_interface /dev/minipix 115200 0 /tmp/ttyS2 115200 1
+        - sleep 0.5; ./minipix_dummy /tmp/ttyS0 115200 1 `pwd`/dummy_data
+        - sleep 0.5; ./example_interface /tmp/ttyS1 115200 1 /tmp/ttyS2 115200 1
         - sleep 1.0; ./gatherer /tmp/ttyS3 115200 1 `pwd`/received_data/data.txt
