--- a/software/example_interface/stm32f411/gdb.conf
+++ b/software/example_interface/stm32f411/gdb.conf
@@ -2,7 +2,7 @@ set breakpoint pending on
 
 # set breakpoints
 # break main.c:181
-break mui.c:181
+# break mui.c:181
 # break mui.c:261
 # break gatherer_interface.c:81
 # break gatherer_interface_stm.c:76
