--- a/software/tmux/linux_mui_hw_minipix/session.yml
+++ b/software/tmux/linux_mui_hw_minipix/session.yml
@@ -1,4 +1,4 @@
-name: minipix_virtual
+name: linux_mui_hw_minipix
 root: ./
 startup_window: main
 # pre_window: 
@@ -10,5 +10,5 @@ windows:
   - main:
       layout: even-vertical
       panes:
-        - sleep 0.5; ./example_interface /dev/minipix 115200 0 /tmp/ttyS2 115200 1
-        - sleep 1.0; ./gatherer /tmp/ttyS3 115200 1 `pwd`/received_data/data.txt
+        - sleep 0.5; ./example_interface /dev/minipix 921600 0 /tmp/ttyS2 921600 1
+        - sleep 1.0; ./gatherer /tmp/ttyS3 921600 1 `pwd`/received_data/data.txt
