--- a/software/tmux/all_linux/session.yml
+++ b/software/tmux/all_linux/session.yml
@@ -1,4 +1,4 @@
-name: minipix_virtual
+name: all_linux
 root: ./
 startup_window: main
 # pre_window:
@@ -11,6 +11,6 @@ windows:
   - main:
       layout: even-vertical
       panes:
-        - sleep 0.5; ./minipix_dummy /tmp/ttyS0 115200 1 `pwd`/dummy_data
-        - sleep 0.5; ./example_interface /tmp/ttyS1 115200 1 /tmp/ttyS2 115200 1
-        - sleep 1.0; ./gatherer /tmp/ttyS3 115200 1 `pwd`/received_data/data.txt
+        - sleep 0.5; ./minipix_dummy /tmp/ttyS0 921600 1 `pwd`/dummy_data
+        - sleep 0.5; ./example_interface /tmp/ttyS1 921600 1 /tmp/ttyS2 921600 1
+        - sleep 1.0; ./gatherer /tmp/ttyS3 921600 1 `pwd`/received_data/data.txt
