--- a/software/tmux/hw_mui_hw_minipix/session.yml
+++ b/software/tmux/hw_mui_hw_minipix/session.yml
@@ -5,4 +5,4 @@ windows:
   - main:
       layout: even-vertical
       panes:
-        - ./gatherer /dev/ttyUSB0 921600 0 `pwd`/received_data/data.txt
+        - ./gatherer /dev/minipix 921600 0 `pwd`/received_data/data.txt
