first working oneweb example

--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -7,4 +7,5 @@ add_subdirectory(./mui)
 add_subdirectory(./dummy/linux)
 add_subdirectory(./example_interface/linux)
 add_subdirectory(./gatherer)
+add_subdirectory(./example_oneweb)
 # add_subdirectory(./example_interface/stm32f411)
