added oneweb dummy, fixed some example bugs

--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -5,6 +5,7 @@ project(minipix_uart_interface)
 add_subdirectory(./llcp)
 add_subdirectory(./mui)
 add_subdirectory(./dummy/linux)
+add_subdirectory(./dummy/oneweb)
 add_subdirectory(./example_interface/linux)
 add_subdirectory(./gatherer)
 add_subdirectory(./example_oneweb)
