--- a/software/tmux/oneweb/session.yml
+++ b/software/tmux/oneweb/session.yml
@@ -11,5 +11,5 @@ windows:
   - main:
       layout: even-vertical
       panes:
-        - sleep 0.5; ./minipix_dummy /tmp/ttyS0 921600 1 `pwd`/dummy_data
+        - sleep 0.5; ./minipix_dummy_oneweb /tmp/ttyS0 921600 1
         - sleep 1.5; ./example_oneweb /tmp/ttyS1 921600 1 `pwd`/received_data/data.txt
